css/custom.css
/* ... */
#feature-last {
  background: #00ffad;
}


/********** RWD **********/
@media (max-width: 575px) {
  #main h1 {
    font-size: 3.6rem;
  }
}
.navbar .nav-link {
  color: white !important;
}

#main {
  height: auto;
  -webkit-transition: background-image 1s linear;
  transition: background-image 1s linear;
  background-size: cover !important;
  background-image: -webkit-gradient(
      linear,
      right top, left top,
      from(rgba(0, 0, 0, 0.6)),
      color-stop(27%, transparent)
    ),
    -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), color-stop(27%, transparent)),
    -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.6)), color-stop(27%, transparent)),
    url(../img/background/gorsel1.png);
  background-image: -webkit-linear-gradient(
      right,
      rgba(0, 0, 0, 0.6),
      transparent 27%
    ),
    -webkit-linear-gradient(top, rgba(0, 0, 0, 0.6), transparent 27%),
    -webkit-linear-gradient(left, rgba(0, 0, 0, 0.6), transparent 27%),
    url(../img/background/gorsel1.png);
  background-image: linear-gradient(
      to left,
      rgba(0, 0, 0, 0.6),
      transparent 27%
    ),
    linear-gradient(to bottom, rgba(0, 0, 0, 0.6), transparent 27%),
    linear-gradient(to right, rgba(0, 0, 0, 0.6), transparent 27%),
    url(../img/background/gorsel1.png);
}

.language {
  border-radius: 80px !important;
  line-height: 1.2rem !important;
  width: 5rem !important;
  background-color: transparent !important;
  text-align: left !important;
  border-color: white !important;
}
.dropdown-menu {
  padding: 0 !important;
  border-radius: 50px !important;
  background-color: transparent !important;
  min-width: 62px !important;
  border: 1px solid white !important;
  text-align: center !important;
}
.dropdown-item,
.dropdown-menu {
  background: transparent !important;
  color: white !important;
  width: 5rem;
  text-align: left !important;
}
.dropdown-toggle:after {
  margin-top: 0.4em;
  float: right;
}
.dropdown:hover > .dropdown-menu {
  display: block;
}

.dropdown-menu:hover {
  display: block;
}

.dropdown > .dropdown-toggle:active {
  pointer-events: none;
}


@media (min-width: 576px) {
  header {
    position: relative;
    bottom: 66px;
  }
  .navbar-nav .nav-link {
    margin-right: 35px;
    margin-left: 35px;
  }
  .navbar-nav.ml-auto {
    height: 100% !important;
    line-height: 65px !important;
  }
  .collapse .navbar-collapse {
    height: 80px;
  }
  .dropdown-item {
    padding: 0.25rem 1rem !important;
  }
  .loginBtn {
    margin-left: 1rem;
  }
  #main {
    height: 90vh;
  }
  .mainButtons {
    margin-top: 3rem;
  }
  .switch {
    background-image: url(../img/switchIcon.svg);
    position: absolute;
    margin: 0 auto;
    height: 70px;
    width: 50px;
    background-size: cover;
    background-repeat: no-repeat;
    left: 50%;
    bottom: 13vh;
  }
  .switchInner {
    background-image: url(../img/switchInner.svg);
    position: absolute;
    margin: 0 auto;
    height: 70px;
    width: 50px;
    background-size: cover;
    background-repeat: no-repeat;
    left: 50%;
    bottom: 13vh;
    -webkit-transition: 0.6s;
    transition: 0.6s;
    -webkit-animation: MoveUpDown 1.7s linear infinite;
            animation: MoveUpDown 1.7s linear infinite;
  }
}

@-webkit-keyframes MoveUpDown {
  from {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
    opacity: 1;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
  }
  to {
    -webkit-transform: translateY(30px);
            transform: translateY(30px);
    opacity: 0;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  }
}

@keyframes MoveUpDown {
  from {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
    opacity: 1;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
  }
  to {
    -webkit-transform: translateY(30px);
            transform: translateY(30px);
    opacity: 0;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  }
}

.card {
    z-index: 0;
    min-height: 540px;
}

.card img {
    position: relative;
    z-index: -1;
}

.card1Text {
    color: white;
    position: absolute;
    top: 24%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
    font-size: 35.2px;
    font-size: 3.5rem;
    font-family: Eboracum;
}
.card2Text {
  color: white;
  position: absolute;
  top: 25%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  font-size: 35.2px;
  font-size: 2.2rem;
  font-family: Eboracum;
}

.card3Text {
    color: white;
    position: absolute;
    top: 23%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
    font-size: 35.2px;
    font-size: 2.2rem;
    font-family: Eboracum;
}

.middleImg {
    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(35%, transparent), to(#191919));
    background-image: -webkit-linear-gradient(bottom, transparent 35%, #191919 100%);
    background-image: linear-gradient(to top, transparent 35%, #191919 100%);
}

.display-3 {
  font-size: 64px !important;
  font-size: 4rem !important;
  text-shadow: 5px 5px 20px #000;
}

.headerComment {
  font-size: 19.2px !important;
  font-size: 1.2rem !important;
  text-shadow: 2px 2px 10px #000;
}

.card.mb-2 {
  border: 5px solid lightgray !important;
}

#section2 {
  background: #212121;
  height: auto;
  min-height: 95vh;
}

#section2:hover {
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.image-widescreen{
  border: 1px solid red;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  min-height: 330px;
  max-height: 330px; 
  overflow-y: hidden;
}
/* ... */

